--- a/.classpath
+++ b/.classpath
@@ -1,6 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER">
+		<attributes>
+			<attribute name="module" value="true"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="src" path="Relacionamentos/src"/>
+	<classpathentry kind="lib" path="C:/Temp/DISK1/ojdbc6.jar"/>
 	<classpathentry kind="output" path="Relacionamentos/bin"/>
 </classpath>
